--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,6 +6,8 @@ android {
     defaultConfig {
         applicationId "com.example.materialtest"
         minSdkVersion 28
+        aaptOptions.cruncherEnabled = false
+        aaptOptions.useNewCruncher = false
         targetSdkVersion 29
         versionCode 1
         versionName "1.0"
